--- a/style.css
+++ b/style.css
@@ -117,10 +117,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 30px;
+  margin-right: 10px;
   color: #FFFFFF;
   font-size: 14px;
   font-weight: 400;
+  cursor: pointer;
 }
 .header .nav_bar .top_nav_bar .top_nav_bar_items .language::after {
   content: "";
@@ -135,15 +136,15 @@ body {
 }
 .header .nav_bar .bottom_nav_bar_items {
   display: flex;
-  justify-content: space-between;
   margin-top: 15px;
 }
 .header .nav_bar .bottom_nav_bar_items .nav_logo {
-  margin-left: 20px;
+  margin-left: 11px;
 }
 .header .nav_bar .bottom_nav_bar_menu {
   display: flex;
   align-items: center;
+  margin-left: 160px;
 }
 .header .nav_bar .bottom_nav_bar_menu li {
   margin-right: 61px;
@@ -175,4 +176,188 @@ body {
   height: 20px;
   width: 20px;
   margin-left: 5px;
+}
+.header .nav_bar .bottom_nav_bar .bottom_nav_bar_button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 50px;
+  background-color: #00730C;
+  border-radius: 5px;
+  color: #FFFFFF;
+  margin-right: 5px;
+  cursor: pointer;
+}
+.header .nav_bar .bottom_nav_bar .bottom_nav_bar_button p {
+  display: flex;
+  align-items: center;
+}
+.header .nav_bar .bottom_nav_bar .bottom_nav_bar_button p::before {
+  content: "";
+  background-image: url("./images/navbar_phone.svg");
+  background-repeat: no-repeat;
+  width: 41px;
+  height: 29px;
+}
+.header .nav_bar .hero {
+  position: relative;
+  width: 100%;
+  height: 719px;
+  background: url("./images/hero_BG.svg") center center no-repeat;
+  background-size: cover;
+}
+.header .nav_bar .hero_items {
+  position: absolute;
+  top: 138px;
+  width: 696px;
+  height: 386px;
+  margin-left: 10px;
+}
+.header .nav_bar .hero_items .text {
+  width: 696px;
+  height: 278px;
+}
+.header .nav_bar .hero_items .text .img_leaflets {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  font-size: 16px;
+  color: #212529;
+}
+.header .nav_bar .hero_items .text .img_leaflets::before {
+  content: "";
+  background-image: url("./images/leaflets.svg");
+  background-repeat: no-repeat;
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+}
+.header .nav_bar .hero_items .text .hero_img {
+  margin-top: 20px;
+}
+.header .nav_bar .hero_items .text .hero_text {
+  font-weight: 400;
+  font-size: 18px;
+  color: #676767;
+  margin-top: 20px;
+}
+.header .nav_bar .hero_items .buttons {
+  display: flex;
+  width: 696px;
+  height: 58px;
+}
+.header .nav_bar .hero_items .buttons .hero_button_1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  background-color: #00730C;
+  width: 175px;
+  height: 50px;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 18px;
+  cursor: pointer;
+}
+.header .nav_bar .hero_items .buttons .hero_button_2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 177px;
+  height: 37px;
+  margin-left: 30px;
+  margin-top: 6px;
+  font-weight: 600;
+  font-size: 18px;
+  color: #676767;
+  cursor: pointer;
+}
+.header .nav_bar .hero_items .buttons .hero_button_2 .hero_button_text {
+  display: flex;
+}
+.header .nav_bar .hero_items .buttons .hero_button_2 .hero_button_text::after {
+  content: "";
+  background-image: url("./images/arrow_right.svg");
+  background-repeat: no-repeat;
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+.header .nav_bar .hero_items .tags {
+  display: flex;
+  justify-content: space-between;
+  width: 467px;
+  height: 50px;
+  margin-top: 50px;
+}
+.header .nav_bar .hero_items .tags li {
+  display: flex;
+  align-items: center;
+  width: 149px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  color: #212529;
+}
+.header .nav_bar .hero_items .tags li img {
+  margin-right: 10px;
+}
+
+.main .services {
+  height: 963px;
+  margin-top: 100px;
+}
+.main .services .services_text {
+  text-align: center;
+}
+.main .services .services_text p {
+  margin-top: 30px;
+  margin-bottom: 50px;
+  font-weight: 400;
+  font-size: 13px;
+  color: #676767;
+}
+.main .services .cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 1410px;
+  height: 762px;
+}
+.main .services .cards li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 330px;
+  height: 366px;
+  box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+  background: url("./images/Services_BG.svg") no-repeat;
+  background-position: 77px 26px;
+  border-radius: 10px;
+}
+.main .services .cards li:hover {
+  background-color: #00730C;
+}
+.main .services .cards li .text_and_icon {
+  width: 243px;
+  height: 247px;
+  text-align: center;
+}
+.main .services .cards li .text_and_icon .text {
+  width: 100%;
+  height: 127px;
+  margin-top: 55px;
+}
+.main .services .cards li .text_and_icon .text p:first-child {
+  margin-bottom: 17px;
+  font-weight: 700;
+  font-size: 24px;
+  color: #212529;
+}
+.main .services .cards li .text_and_icon .text p:last-child {
+  font-weight: 400;
+  font-size: 16px;
+  color: #676767;
 }/*# sourceMappingURL=style.css.map */
