--- a/style.scss
+++ b/style.scss
@@ -70,10 +70,11 @@ body{
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        margin-right: 30px;
+                        margin-right: 10px;
                         color: $typograrphyColor_2;
                         font-size: 14px;
                         font-weight: 400;
+                        cursor: pointer;
                         &::after{
                             content: "";
                             background-image: url("./images/arrow_down_white.svg");
@@ -90,15 +91,15 @@ body{
             height: 85px;
             &_items{
                 display: flex;
-                justify-content: space-between;
                 margin-top: 15px;
                 .nav_logo{
-                    margin-left: 20px;
+                    margin-left: 11px;
                 }
             }
             &_menu{
                 display: flex;
                 align-items: center;
+                margin-left: 160px;
             }
             &_menu li{
                 margin-right: 61px;
@@ -131,8 +132,200 @@ body{
                 width: 20px;
                 margin-left: 5px;
             }
+            .bottom_nav_bar_button{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 170px;
+                height: 50px;
+                background-color: $themeColor_1;
+                border-radius: 5px;
+                color: $typograrphyColor_2;
+                margin-right: 5px;
+                cursor: pointer;
+                & p{
+                    display: flex;
+                    align-items: center;
+                }
+                & p::before{
+                    content: "";
+                    background-image: url("./images/navbar_phone.svg");
+                    background-repeat: no-repeat;
+                    width: 41px;
+                    height: 29px;
+                }
+            }
+        }
+        .hero{
+            position: relative;
+            width: 100%;
+            height: 719px;
+            background: url("./images/hero_BG.svg") center center no-repeat;
+            background-size: cover;
+            // .hero_bg{
+            //     position: absolute;
+            //     left: 50px;
+            //     width: 1013px;
+            //     height: 673px;
+            // }
+            &_items{
+                position: absolute;
+                top: 138px;
+                width: 696px;
+                height: 386px;
+                margin-left: 10px;
+                .text{
+                    width: 696px;
+                    height: 278px;
+                    & .img_leaflets{
+                        display: flex;
+                        align-items: center;
+                        font-weight: 700;
+                        font-size: 16px;
+                        color: $typograrphyColor_1;
+                    }
+                    & .img_leaflets::before{
+                        content: "";
+                        background-image: url("./images/leaflets.svg");
+                        background-repeat: no-repeat;
+                        width: 25px;
+                        height: 25px;
+                        margin-right: 5px;
+                    }
+                    & .hero_img{
+                        margin-top: 20px;
+                    }
+                    .hero_text{
+                        font-weight: 400;
+                        font-size: 18px;
+                        color: $typograrphyColor_3;
+                        margin-top: 20px;
+                    }
+                }
+                
+                .buttons{
+                    display: flex;
+                    width: 696px;
+                    height: 58px;
+                    .hero_button_1{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border-radius: 5px;
+                        background-color: $cardsAndBackgroundsColors_7;
+                        width: 175px;
+                        height: 50px;
+                        color: $typograrphyColor_2;
+                        font-weight: 700;
+                        font-size: 18px;
+                        cursor: pointer;
+                    }
+                    .hero_button_2{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 177px;
+                        height: 37px;
+                        margin-left: 30px;
+                        margin-top: 6px;
+                        font-weight: 600;
+                        font-size: 18px;
+                        color: $typograrphyColor_3;
+                        cursor: pointer;
+                        & .hero_button_text{
+                            display: flex;
+                        }
+                        & .hero_button_text::after{
+                            content: "";
+                            background-image: url("./images/arrow_right.svg");
+                            background-repeat: no-repeat;
+                            width: 25px;
+                            height: 25px;
+                            margin-left: 10px;
+                        }
+                    }
+                }
+                .tags{
+                    display: flex;
+                    justify-content: space-between;
+                    width: 467px;
+                    height: 50px;
+                    margin-top: 50px;
+                    & li{
+                        display: flex;
+                        align-items: center;
+                        width: 149px;
+                        height: 50px;
+                        font-weight: 700;
+                        font-size: 16px;
+                        color: $typograrphyColor_1;
+                    }
+                    & li img{
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+    }   
+}
+
+.main{
+    .services{
+        height: 963px;
+        margin-top: 100px;
+        .services_text{
+            text-align: center;
+        }
+        .services_text p{
+            margin-top: 30px;
+            margin-bottom: 50px;
+            font-weight: 400;
+            font-size: 13px;
+            color: $typograrphyColor_3;
+        }
+        .cards{
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            margin: 0 auto;
+            width: 1410px;
+            height: 762px;
+            & li{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 330px;
+                height: 366px;
+                box-shadow: 2px 11px 30px rgba(51, 51, 51, 0.08);
+                background: url("./images/Services_BG.svg") no-repeat;
+                background-position: 77px 26px;
+                border-radius: 10px;
+            }
+            & li:hover{
+                background-color: $cardsAndBackgroundsColors_7;
+            }
+            & li .text_and_icon{
+                width: 243px;
+                height: 247px;
+                text-align: center;
+                .text{
+                    width: 100%;
+                    height: 127px;
+                    margin-top: 55px;
+                }
+                .text p:first-child{
+                    margin-bottom: 17px;
+                    font-weight: 700;
+                    font-size: 24px;
+                    color: $typograrphyColor_1;
+                }
+                .text p:last-child{
+                    font-weight: 400;
+                    font-size: 16px;
+                    color: $typograrphyColor_3;
+                }
+            }
         }
     }
-    
 }
 
