--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 .header .nav_bar .top_nav_bar .top_nav_bar_items {
   display: flex;
   justify-content: space-between;
-  padding-top: 23px;
+  padding-top: 17px;
 }
 .header .nav_bar .top_nav_bar .top_nav_bar_items .address_and_phone {
   display: flex;
@@ -163,16 +163,13 @@ body {
 .header .nav_bar .bottom_nav_bar_menu li a:hover::after {
   content: "";
   background-image: url("./images/arrow_down_green.svg");
-  background-repeat: no-repeat;
   height: 20px;
   width: 20px;
   margin-left: 5px;
-  margin-top: 4px;
 }
 .header .nav_bar .bottom_nav_bar_menu li a::after {
   content: "";
-  background-image: url("./images/arrow_down_black.svg");
-  background-repeat: no-repeat;
+  background: url("./images/arrow_down_black.svg") center center no-repeat;
   height: 20px;
   width: 20px;
   margin-left: 5px;
