--- a/style.css
+++ b/style.css
@@ -313,7 +313,6 @@ body {
   margin-bottom: 50px;
   font-weight: 400;
   font-size: 13px;
-  color: #676767;
 }
 .main .services .cards {
   display: flex;
@@ -336,25 +335,33 @@ body {
 }
 .main .services .cards li:hover {
   background-color: #00730C;
+  color: white;
 }
 .main .services .cards li .text_and_icon {
   width: 243px;
   height: 247px;
   text-align: center;
 }
-.main .services .cards li .text_and_icon .text {
-  width: 100%;
-  height: 127px;
+.main .services .cards li .text_and_icon .text_1 {
   margin-top: 55px;
-}
-.main .services .cards li .text_and_icon .text p:first-child {
   margin-bottom: 17px;
   font-weight: 700;
   font-size: 24px;
-  color: #212529;
 }
-.main .services .cards li .text_and_icon .text p:last-child {
+.main .services .cards li .text_and_icon .text_2 {
   font-weight: 400;
   font-size: 16px;
-  color: #676767;
+}
+.main .services .cards li .text_and_icon .photo img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.main .services .cards li .text_and_icon .photo:nth-last-of-type(1) {
+  display: none;
+}
+.main .services .cards li:hover .photo:nth-last-of-type(2) {
+  display: none;
+}
+.main .services .cards li:hover .photo:nth-last-of-type(1) {
+  display: block;
 }/*# sourceMappingURL=style.css.map */
