--- a/style.scss
+++ b/style.scss
@@ -278,7 +278,7 @@ body{
             margin-bottom: 50px;
             font-weight: 400;
             font-size: 13px;
-            color: $typograrphyColor_3;
+
         }
         .cards{
             display: flex;
@@ -300,28 +300,38 @@ body{
             }
             & li:hover{
                 background-color: $cardsAndBackgroundsColors_7;
+                color: white;
             }
             & li .text_and_icon{
                 width: 243px;
                 height: 247px;
                 text-align: center;
-                .text{
-                    width: 100%;
-                    height: 127px;
+                
+                .text_1{
                     margin-top: 55px;
-                }
-                .text p:first-child{
                     margin-bottom: 17px;
                     font-weight: 700;
                     font-size: 24px;
-                    color: $typograrphyColor_1;
-                }
-                .text p:last-child{
+                } 
+                .text_2{
                     font-weight: 400;
                     font-size: 16px;
-                    color: $typograrphyColor_3;
+                    
                 }
             }
+            & li .text_and_icon .photo img{
+                object-fit: cover;
+            }
+            & li .text_and_icon .photo:nth-last-of-type(1){
+                display: none;
+            }
+            & li:hover .photo:nth-last-of-type(2){
+                display: none;
+            }
+            & li:hover .photo:nth-last-of-type(1){
+                display: block;
+            }
+           
         }
     }
 }
