--- a/style.css
+++ b/style.css
@@ -364,4 +364,92 @@ body {
 }
 .main .services .cards li:hover .photo:nth-last-of-type(1) {
   display: block;
+}
+.main .about_us {
+  display: flex;
+  justify-content: space-between;
+  height: 903px;
+  margin-top: 100px;
+}
+.main .about_us_images {
+  position: relative;
+  width: 693px;
+  height: 903px;
+}
+.main .about_us_images .image_1 {
+  position: absolute;
+}
+.main .about_us_images .image_2 {
+  position: absolute;
+  top: 33px;
+  left: 20px;
+}
+.main .about_us_images .image_3 {
+  position: absolute;
+  top: 600px;
+  left: 224px;
+}
+.main .about_us .about_us_content {
+  width: 673px;
+}
+.main .about_us .about_us_content h2 {
+  font-family: "Nunito";
+  font-weight: 800;
+  font-size: 45px;
+  line-height: 61px;
+  margin-bottom: 30px;
+}
+.main .about_us .about_us_content h2 span {
+  color: #00730C;
+}
+.main .about_us .about_us_content .about_us_text_1 {
+  color: #676767;
+  font-family: "Poppins";
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 40px;
+}
+.main .about_us .about_us_content .about_us_text_2 {
+  color: #676767;
+  font-family: "Poppins";
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 40px;
+}
+.main .about_us .about_us_content .about_us_cards {
+  display: flex;
+  flex-wrap: wrap;
+  width: 690px;
+  height: 224px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.main .about_us .about_us_content .about_us_cards li {
+  display: flex;
+  align-items: center;
+  width: 330px;
+  height: 97px;
+}
+.main .about_us .about_us_content .about_us_cards li img {
+  margin-right: 25px;
+  margin-left: 28px;
+}
+.main .about_us .about_us_content .about_us_cards li p {
+  font-family: "Nunito";
+  font-weight: 700;
+  font-size: 24px;
+  color: #212529;
+}
+.main .about_us .about_us_btn {
+  display: block;
+  width: 190px;
+  height: 50px;
+  border: none;
+  background-color: #00730C;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-family: "Nunito";
+  font-weight: 700;
+  font-size: 18px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
